[gd_scene load_steps=46 format=2]

[ext_resource path="res://Sprites/Main Characters/Pink Man/Idle (32x32).png" type="Texture" id=1]
[ext_resource path="res://Sprites/Main Characters/Pink Man/Run (32x32).png" type="Texture" id=2]
[ext_resource path="res://Sprites/Main Characters/Pink Man/Hit (32x32).png" type="Texture" id=3]
[ext_resource path="res://Sprites/Main Characters/Pink Man/Jump (32x32).png" type="Texture" id=4]
[ext_resource path="res://Scripts/Player/KinematicBody2D.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Background/Pink.png" type="Texture" id=6]
[ext_resource path="res://Scripts/UI/Timer.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/UI/TopRightUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/SFX/jump.ogg" type="AudioStream" id=9]
[ext_resource path="res://Assets/SFX/shoot.ogg" type="AudioStream" id=10]
[ext_resource path="res://Assets/SFX/takedamage.ogg" type="AudioStream" id=11]
[ext_resource path="res://Assets/SFX/died.ogg" type="AudioStream" id=12]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=31]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="Animation" id=32]
resource_name = "take_damage"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 0.992157 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=33]
radius = 15.5672
height = 9.19061

[node name="player" type="KinematicBody2D" groups=[
"Player",
]]
collision_layer = 2
collision_mask = 7
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.4888, 1.5 )
z_index = 1
frames = SubResource( 31 )
animation = "Idle"
speed_scale = 2.0

[node name="RightHand" type="Position2D" parent="AnimatedSprite"]
position = Vector2( 11, 9 )

[node name="LeftHand" type="Position2D" parent="AnimatedSprite"]
position = Vector2( -24.8522, -4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/take_damage = SubResource( 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 33 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Pink" type="Sprite" parent="ParallaxBackground"]
scale = Vector2( 35, 35 )
texture = ExtResource( 6 )
centered = false

[node name="Control" type="Control" parent="ParallaxBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopRightUI" parent="ParallaxBackground/Control" instance=ExtResource( 8 )]
anchor_bottom = 0.0

[node name="Timer" parent="ParallaxBackground/Control" instance=ExtResource( 7 )]
margin_right = 0.0
margin_bottom = 0.0

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="ViewportContainer" type="ViewportContainer" parent="Camera2D/CanvasLayer"]
visible = false
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BounceRaycasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="BounceRaycasts"]
position = Vector2( 0, 25 )
collision_mask = 16

[node name="RayCast2D2" type="RayCast2D" parent="BounceRaycasts"]
position = Vector2( -8, 25 )
collision_mask = 16

[node name="RayCast2D3" type="RayCast2D" parent="BounceRaycasts"]
position = Vector2( 7, 25 )
collision_mask = 16
collide_with_areas = true

[node name="RayCast2D4" type="RayCast2D" parent="BounceRaycasts"]
position = Vector2( -16, 25 )
collision_mask = 16
collide_with_areas = true

[node name="RayCast2D5" type="RayCast2D" parent="BounceRaycasts"]
position = Vector2( 15, 25 )
collision_mask = 16
collide_with_areas = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
pitch_scale = 1.37
attenuation = 0.00364466

[node name="shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="takedamage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
attenuation = 0.574349

[node name="died" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
[connection signal="animation_finished" from="AnimatedSprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_CoyoteTimer_timeout"]
[connection signal="finished" from="died" to="." method="_on_died_finished"]
